Added one Item Group

--- a/src/main/resources/assets/darcevo/lang/en_us.json
+++ b/src/main/resources/assets/darcevo/lang/en_us.json
@@ -1,4 +1,8 @@
 {
+  //-----Item Groups-----//
+  "itemgroup.darcevo.darc_main": "Darc Evolution",
+
+
   //-----Tourmaline Items-----//
   "item.darcevo.tourmaline": "Tourmaline"
 }
